--- a/UICollectionView/en.lproj/MainStoryboard.storyboard
+++ b/UICollectionView/en.lproj/MainStoryboard.storyboard
@@ -48,6 +48,23 @@
                                                         <constraint firstAttribute="width" constant="337" id="sIo-Gu-coc"/>
                                                     </constraints>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Abk-8O-Hq9">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="10l-rW-aRY"/>
+                                                        <constraint firstAttribute="width" constant="45" id="tr9-Ke-iGE"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <state key="normal" image="buttonClose.png" backgroundImage="buttonClose.png">
+                                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="highlighted">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="buttonClosePressed:" destination="E3g-oL-oU2" eventType="touchUpInside" id="LH8-sv-2gb"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -55,15 +72,18 @@
                                             <constraint firstAttribute="bottom" secondItem="XIR-k1-Xe7" secondAttribute="bottom" constant="10" id="0XF-8i-X65"/>
                                             <constraint firstItem="o7M-jp-oWK" firstAttribute="centerX" secondItem="XIR-k1-Xe7" secondAttribute="centerX" type="default" id="4my-Tn-Yaj"/>
                                             <constraint firstItem="gJA-br-2cx" firstAttribute="top" secondItem="E3g-oL-oU2" secondAttribute="top" constant="114" id="5aR-kX-e6j"/>
-                                            <constraint firstItem="o7M-jp-oWK" firstAttribute="centerX" secondItem="E3g-oL-oU2" secondAttribute="centerX" type="default" id="8TT-yb-BtE"/>
                                             <constraint firstItem="gJA-br-2cx" firstAttribute="leading" secondItem="E3g-oL-oU2" secondAttribute="leading" constant="196" id="LMQ-vQ-4os"/>
                                             <constraint firstItem="o7M-jp-oWK" firstAttribute="top" secondItem="E3g-oL-oU2" secondAttribute="top" constant="14" id="Twx-Xj-ESi"/>
+                                            <constraint firstItem="o7M-jp-oWK" firstAttribute="centerX" secondItem="E3g-oL-oU2" secondAttribute="centerX" type="default" id="i9O-iu-7ni"/>
+                                            <constraint firstItem="Abk-8O-Hq9" firstAttribute="leading" secondItem="E3g-oL-oU2" secondAttribute="leading" constant="97" id="jkC-Zg-1fh"/>
+                                            <constraint firstItem="Abk-8O-Hq9" firstAttribute="top" secondItem="E3g-oL-oU2" secondAttribute="top" constant="20" type="default" id="kFj-rY-4gU"/>
                                         </constraints>
                                         <size key="customSize" width="512" height="335"/>
                                         <connections>
                                             <outlet property="albomImage" destination="o7M-jp-oWK" id="pLl-3e-4k5"/>
                                             <outlet property="albomImageFoto" destination="gJA-br-2cx" id="VWB-13-je8"/>
                                             <outlet property="albomLabel" destination="XIR-k1-Xe7" id="Ldb-Sj-1ju"/>
+                                            <outlet property="buttonClose" destination="Abk-8O-Hq9" id="Sga-r8-q86"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -78,12 +98,13 @@
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="pBI-cR-si1">
                                 <items>
                                     <navigationItem title="Title" id="X6K-mL-CPG">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="xwg-0J-ifB">
+                                        <barButtonItem key="leftBarButtonItem" title="+" id="xwg-0J-ifB">
                                             <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <connections>
                                                 <action selector="addNewItemInSection" destination="2" id="GcM-14-Bbi"/>
                                             </connections>
                                         </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="-" id="nR1-Sw-gDG"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -114,38 +135,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="buttonClose.png" width="189" height="189"/>
         <image name="photoalbum-blue.png" width="700" height="700"/>
     </resources>
-    <classes>
-        <class className="MMViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MMViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addNewItemInSection"/>
-                <relationship kind="outlet" name="albomPageControl" candidateClass="UIPageControl"/>
-                <relationship kind="outlet" name="collectionView" candidateClass="UICollectionView"/>
-            </relationships>
-        </class>
-        <class className="MMalbomCell" superclassName="UICollectionViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MMalbomCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="albomImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="albomImageFoto" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="albomLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
